--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new FileNotFoundException() ("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -22,13 +22,11 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-
-
 apply plugin: 'com.google.gms.google-services'
-
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
     compileSdkVersion 30
 
     compileOptions {
@@ -43,7 +41,7 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnable true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -54,13 +52,13 @@ android {
         }
     }
 }
-
-flutter {
-    source '../..'
-}
 dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.0.1')
     implementation "androidx.multidex:multidex:2.0.1"
 
+}
+
+flutter {
+    source '../..'
 }
